--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.17",
+    "element-ui": "^2.15.10",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3",
+    "vue3-timeline": "^1.2.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
