--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-cute-timeline": "^1.2.10",
+    "vue-next-timeline": "^0.2.1",
     "vue-router": "^4.0.3",
     "vue-simple-timeline": "^0.1.2",
     "vue3-timeline": "^1.2.3",
